test/invalid/builtin_call_error.go
package main

func main() {
	a := complex
}
